--- a/src/project_name/templates/base.html
+++ b/src/project_name/templates/base.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}Project title{% endblock title %}</title>
+    <title>{% block title %}{{ project_name }}{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'img/favicons/favicon-96.png' %}">
   </head>
