Cleanup static files

--- a/src/project_name/templates/base.html
+++ b/src/project_name/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>{% block title %}{{ project_name }}{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{% static 'img/favicons/favicon-96.png' %}">
+    <link rel="icon" href="{% static 'icons/favicon-96.png' %}">
   </head>
   <body>
     <div class="container">
