Fix default visibility & auth errors

--- a/src/project_name/templates/admin/login.html
+++ b/src/project_name/templates/admin/login.html
@@ -16,6 +16,7 @@
         <img src="{% static 'admin/img/google.svg' %}" />
         {% translate "Sign in with Google" %}
     </a>
+    <ul class="gauth errors"></ul>
 {% endblock content %}
 
 {% block footer %}
