--- a/src/project_name/templates/admin/base_site.html
+++ b/src/project_name/templates/admin/base_site.html
@@ -3,5 +3,5 @@
 
 {% block extrahead %}
     {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="{% static 'admin/css/theme.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/css/admin_theme.css' %}">
 {% endblock %}
