--- a/src/project_name/templates/admin/login.html
+++ b/src/project_name/templates/admin/login.html
@@ -5,7 +5,7 @@
 {% block extrahead %}
     <meta name="google-signin-client_id" content="{{ google_client_id }}">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="{% static 'admin/css/login.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'admin/css/login_theme.css' %}">
 {% endblock %}
 
 {% block content %}
