--- a/src/project_name/templates/admin/login.html
+++ b/src/project_name/templates/admin/login.html
@@ -3,23 +3,29 @@
 {% load static i18n %}
 
 {% block extrahead %}
-    <meta name="google-signin-client_id" content="{{ google_client_id }}">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="{% static 'admin/css/login_theme.css' %}">
+    {% if google_client_id %}
+        <meta name="google-signin-client_id" content="{{ google_client_id }}">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="{% static 'admin/css/login_theme.css' %}">
+    {% endif %}
 {% endblock %}
 
 {% block content %}
     {{ block.super }}
-    <br />
-    <hr />
-    <a href="#" class="google_login">
-        <img src="{% static 'admin/img/google.svg' %}" />
-        {% translate "Sign in with Google" %}
-    </a>
-    <ul class="gauth errors"></ul>
+    {% if google_client_id %}
+        <br />
+        <hr />
+        <a href="#" class="google_login">
+            <img src="{% static 'admin/img/google.svg' %}" />
+            {% translate "Sign in with Google" %}
+        </a>
+        <ul class="gauth errors"></ul>
+    {% endif %}
 {% endblock content %}
 
 {% block footer %}
-    <script src="https://apis.google.com/js/api:client.js" async defer></script>
-    <script src="{% static 'admin/js/google_auth.js' %}"></script>
+    {% if google_client_id %}
+        <script src="https://apis.google.com/js/api:client.js" async defer></script>
+        <script src="{% static 'admin/js/google_auth.js' %}"></script>
+    {% endif %}
 {% endblock %}
