--- a/src/project_name/templates/base.html
+++ b/src/project_name/templates/base.html
@@ -1,17 +1,17 @@
 {% load static i18n %}
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}{{ project_name }}{% endblock title %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{% static 'icons/favicon-96.png' %}">
-  </head>
-  <body>
-    <div class="container">
-      {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
-      {% endblock content %}
-    </div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <title>{% block title %}{{ project_name }}{% endblock title %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="{% static 'icons/favicon-96.png' %}" />
+    </head>
+    <body>
+        <div class="container">
+            {% block content %}
+            <p>Use this document as a way to quick start any new project.</p>
+            {% endblock content %}
+        </div>
+    </body>
 </html>
