--- a/src/project_name/templates/admin/base_site.html
+++ b/src/project_name/templates/admin/base_site.html
@@ -4,6 +4,7 @@
 {% block extrahead %}
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static 'admin/css/admin_theme.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
 {% endblock %}
 
 {% block footer %}
